Bug 458493 - Crash calling nsSVGEffects::RemoveRenderingObserver. r+sr=roc